IngressAndRestrictionPod/RestrictPod/RestrictPolicy2/pod1-with-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns1
  labels:
    name: abanoub
---
apiVersion: v1
kind: Pod
metadata:
  name: ng1
  namespace: ns1
spec:
  containers:
  - name: nginx-ns1
    image: nginx
    ports:
    - containerPort: 80



# kubectl get namespaces --show-labels
