IngressAndRestrictionPod/RestrictPod/RestrictPolicy2/pod1.1-with-ns.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ng11
  namespace: ns1
spec:
  containers:
  - name: nginx-ns11
    image: nginx
    ports:
    - containerPort: 80
