IngressAndRestrictionPod/RestrictPod/RestrictPolicy2/pod2-with-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns2
  labels:
    name: ns2  
---
apiVersion: v1
kind: Pod
metadata:
  name: ng2
  namespace: ns2
spec:
  containers:
  - name: nginx-ns2
    image: nginx
    ports:
    - containerPort: 80
