IngressAndRestrictionPod/RestrictPod/RestrictPolicy2/podINDefaultNS.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-default
spec:
  containers:
  - name: nginx-default
    image: nginx
    ports:
    - containerPort: 80
